# BWE

./: .gitignore  Architecture.md  CMakeLists.txt  README.md  requirements.txt
config/: datasets.yaml
data/: datasets.md
docs/: datasets.md
scripts/: data.py  data.sh  download.sh  download_datasets.py  generate_dummy.sh  generate_dummy_data.py  generate_plot.py  plot.py  test.sh
sim/: CMakeLists.txt  network_simulator.cpp  network_simulator.h
src/api/: bwe_api.cpp  bwe_api.h
src/bwe/: bwe_core.h  bwe_core_impl.cpp  quality_scorer.cpp  quality_scorer.h  signal_preprocessor.cpp  signal_preprocessor.h
src/network/: measurement_collector.cpp  measurement_collector.h  network_stats.h
tests/: CMakeLists.txt  test_bwe_core.cpp  test_network_simulator.cpp  test_quality_scorer.cpp  test_signal_preprocessor.cpp
tools/: CMakeLists.txt  bwe_fit_runner.cpp
